fixed modal sizing issue on mobile

--- a/src/assets/css/sportsfinder.css
+++ b/src/assets/css/sportsfinder.css
@@ -546,17 +546,17 @@
   
   .modal-open, .modal-closed  {
     position: fixed;
-    top: 15%;
+    top: 8%;
     left: 25%;
     color: white;
     background-color: rgba(0,0,0,0.8);
-    height: 75vh;
+    height: 85vh;
     width: 45vw;
     z-index: 7;
   }
 
   .modal-closed  {
-    top: -83%;
+    top: -103%;
   }
 
   .modal-success-open, .modal-success-closed {
@@ -648,8 +648,8 @@
   }
 
   #modal .game_info, #modal .game_address {
-    overflow: auto;
-    max-height: 20vh;
+    /* overflow: auto;
+    max-height: 20vh; */
   }
 
   #modal .game_info p {
